drupal/sites/all/themes/antistatique/assets/sass/organisms/_teammates.scss
.team-tiny,
.team-teaser {
  border: none;
  text-align: center;
  color: inherit;
  text-decoration: none;
  display: block;

  .team-avatar {
    text-align: center;
    position: relative;
    display: block;
    margin-bottom: 10px;
    padding: 3px;

    &:before {
      content: '';
      width: 100%;
      height: 100%;
      display: block;
      transition: all $transition-duration;
      position: absolute;
      top: 0%; // we have to put the % after 0 for Firefox
      left: 0%;
      border-radius: 200px;
    }
    img {
      position: relative;
    }
  }
}
a.team-tiny,
.team-teaser {
  .h6 {
    display: inline;
  }
  &:hover {
    .h6 {
      @include medium-link($position: .95em);
    }
    .team-avatar {
      &:before {
        background: $link-color;
        animation-name: hover-effect;
        animation-duration: $transition-duration;
        animation-timing-function: ease-in-out;
      }
    }
  }
  &:hover,
  .active & {
    .team-avatar {
      &:before {
        background: $link-color;
      }
    }
    .h6 {
      color: $link-color;
    }
  }
}

.team-teaser {
  margin-bottom: (4*$padding-large-vertical);
  @media only screen and (max-width: $screen-xs-max) {
    display: block;
    img {
      margin: 0 auto;
    }
  }
  .team-avatar {
    img {
      max-width: 180px;
    }
  }
}

.field-teammate-job-title {
  margin: 0 auto;
  max-width: 180px;
}

.profile-full {
  .user-picture {
    img {
      margin: 0 auto;
    }
  }
}

